# minimal-near

./: Cargo.toml  README.md
demo-dependency/: Cargo.toml
demo-dependency/src/: lib.rs
demo-dependency/src/round/: mod.rs
src/: lib.rs
