[package]
name = "demo-dependency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = { version = "5.2.1", features = ["unstable","legacy" ] }
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
near-workspaces = { version = "0.11.0", features = ["unstable"] }
near-sdk = { version = "5.2.1", features = ["unit-testing"] }
serde_json = "1"
